language/move-lang/tests/move_check/parser/byte_string_token_eof2.move
module M {
    public fun bad_value(): vector<u8> {
        b"Libra
    }
}
